--- a/paper/sections/05-UKbiobank-draft01.tex
+++ b/paper/sections/05-UKbiobank-draft01.tex
@@ -3,4 +3,4 @@
 
 \section{Examples}\label{sec:examples}
 
-Here goes an example of implemeting the proposed method for UKbiobank dataset
+Here goes an example of implementing the proposed method for UKbiobank dataset
