--- a/paper/sections/06-discussion-draft01.tex
+++ b/paper/sections/06-discussion-draft01.tex
@@ -3,4 +3,4 @@
 
 \section{Discussion}\label{sec:discussion}
 
-Discuss about the protential limitations of the proposed method
+Discuss about the current limitations of the proposed method
